--- a/Joyce/src/main/resources/templates/common/public/commonFooter.html
+++ b/Joyce/src/main/resources/templates/common/public/commonFooter.html
@@ -9,6 +9,9 @@
   <script th:src="@{/static/bootstrap-table-master/dist/bootstrap-table.js}"></script>
   <script th:src="@{/static/bootstrap-table-master/dist/locale/bootstrap-table-zh-CN.js}"></script>
   <script th:src="@{/static/bootstrap-3.4.1/dist/js/bootstrap.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/url/toastr/js/toastr.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/url/toastr/js/totastr-config.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/url/Ewin/js/Ewin.js}"></script>
     <div style="margin-left: 50%">
       <p>Copyright ©Joyce</p>
     </div>
