--- a/Joyce/src/main/resources/templates/common/public/commonHeader.html
+++ b/Joyce/src/main/resources/templates/common/public/commonHeader.html
@@ -8,5 +8,6 @@
     <link  rel="stylesheet" th:href="@{/static/css/common/public/public.css}" />
     <link  rel="stylesheet" th:href="@{/static/bootstrap-table-master/dist/bootstrap-table.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/common/public/headerBar.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/js/url/toastr/css/toastr.css}" />
 </head>
 
