--- a/Joyce/src/main/resources/templates/common/public/footer.html
+++ b/Joyce/src/main/resources/templates/common/public/footer.html
@@ -13,6 +13,9 @@
   <script type="text/javascript" th:src="@{/static/js/menu/menuList.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/common/public/headerBar.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/tools/createCode/getDb.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/url/toastr/js/toastr.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/url/toastr/js/totastr-config.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/url/Ewin/js/Ewin.js}"></script>
   <!--<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>-->
     <div style="margin-left: 40%">
       <p>Copyright ©Joyce</p>
