--- a/Joyce/src/main/resources/templates/common/public/header.html
+++ b/Joyce/src/main/resources/templates/common/public/header.html
@@ -9,6 +9,7 @@
     <link  rel="stylesheet" th:href="@{/static/css/common/public/headerBar.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/user/userList.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/js/url/toastr/css/toastr.css}" />
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8" />
