--- a/Joyce/src/main/resources/templates/common/public/commonHeader.html
+++ b/Joyce/src/main/resources/templates/common/public/commonHeader.html
@@ -8,6 +8,7 @@
     <link  rel="stylesheet" th:href="@{/static/css/common/public/public.css}" />
     <link  rel="stylesheet" th:href="@{/static/bootstrap-table-master/dist/bootstrap-table.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/common/public/headerBar.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/js/url/toastr/css/toastr.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/static/js/utils/toastr/css/toastr.css}" />
+    <link rel="shortcut icon" th:href="@{/static/img/logo/favicon.ico}" type="image/x-icon" />
 </head>
 
