--- a/Joyce/src/main/resources/templates/index.html
+++ b/Joyce/src/main/resources/templates/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head class="paneBar" th:replace="/common/public/header::header(~{::title})">
 	<title>Joyce主页</title>
+</head>
 	<link  rel="stylesheet" th:href="@{/static/css/common/public/index.css}">
 	<link  rel="stylesheet" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap.css}">
 	<link  rel="stylesheet" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap-theme.css}">
