--- a/Joyce/src/main/resources/templates/common/public/covidPage.html
+++ b/Joyce/src/main/resources/templates/common/public/covidPage.html
@@ -1,25 +1,25 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
     <title>疫情数据</title>
 </head>
-    <style>
-        .container {
-            width: 1200px;
-            margin: 0 auto;
-        }
+<style>
+    .container {
+        width: 1200px;
+        margin: 0 auto;
+    }
 
-        #myEcharts {
-            width: 800px;
-            height: 500px;
-            border: solid 1px red;
-            margin: 0 auto;
+    #myEcharts {
+        width: 800px;
+        height: 500px;
+        border: solid 1px red;
+        margin: 0 auto;
 
-        }
-        #bg_div{
-            width: 800px;
-            height: 500px;
-            background-color: white;
-        }
-    </style>
+    }
+    #bg_div{
+        width: 800px;
+        height: 500px;
+        background-color: white;
+    }
+</style>
 
 </head>
 
@@ -31,6 +31,7 @@
     <div id="bg_div">
         <div id="myEcharts"></div>
     </div>
+    <div id="child"></div>
 </div>
 <input type="hidden"  class="title" value="covid">
 <script type="text/javascript" th:src="@{/static/js/utils/echarts/echarts.js}"></script>
@@ -39,8 +40,9 @@
 <script>
     //获取数据
     function getData() {
+         var url ="https://view.inews.qq.com/g2/getOnsInfo?name=disease_h5";
         $.ajax({
-            url: "https://view.inews.qq.com/g2/getOnsInfo?name=disease_h5",
+            url: url,
             dataType: "jsonp",
             success: function (data) {
                 //  console.log(data.data)
@@ -52,21 +54,21 @@
                     //获取到各个省份的数据
                     var province = res.areaTree[0].children;
                     for (var i = 0; i < province.length; i++) {
-                       /*let  bgc =  getbgColor(province[i].total.confirm);*/
+                        /*let  bgc =  getbgColor(province[i].total.confirm);*/
                         var json={};
-                            json = {
-                                name: province[i].name,
-                                todayConfirm: province[i].today.confirm,
-                                todayConfirmCuts: province[i].today.confirmCuts,
-                                value: province[i].total.confirm,
-                                nowConfirm: province[i].total.nowConfirm,
-                                suspect: province[i].total.suspect,
-                                dead: province[i].total.dead,
-                                dataRete: province[i].total.deadRate,
-                                heal: province[i].total.heal,
-                                healRate: province[i].total.healRate,
-                                select: 1
-                            }
+                        json = {
+                            name: province[i].name,
+                            todayConfirm: province[i].today.confirm,
+                            todayConfirmCuts: province[i].today.confirmCuts,
+                            value: province[i].total.confirm,
+                            nowConfirm: province[i].total.nowConfirm,
+                            suspect: province[i].total.suspect,
+                            dead: province[i].total.dead,
+                            dataRete: province[i].total.deadRate,
+                            heal: province[i].total.heal,
+                            healRate: province[i].total.healRate,
+                            select: 1
+                        }
                         newArr.push(json);
                     }
                     //使用指定的配置项和数据显示图表
@@ -81,7 +83,7 @@
                             formatter:function (params){
                                 return "地区:"+params.name+"</br>"+
                                     "新增确诊:"+params['data'].todayConfirm+"</br>"+
-                                /*    "今日现确诊:"+params['data'].todayConfirmCuts+"</br>"+*/
+                                    /*    "今日现确诊:"+params['data'].todayConfirmCuts+"</br>"+*/
                                     "确诊:"+params.value+"</br>"+
                                     "现确诊:"+params['data'].nowConfirm+"</br>"+
                                     "疑似人数:"+params['data'].suspect+"</br>"+
@@ -126,6 +128,9 @@
                     var myChart = echarts.init(document.getElementById('myEcharts'));
                     //使用制定的配置项和数据显示图表
                     myChart.setOption(option);
+                    myChart.on('click', function(params){
+                        alert(params.name);//此处写点击事件内容
+                    });
                 }
             }
 
@@ -137,5 +142,45 @@
             getData();
         }, 15000);
     });
-
+/**
+ * 获取省下的子集
+ * @param name
+ */
+function getProvinceChild(name){
+   $('#bg_div').hide();
+   var url= "https://c.m.163.com/ug/api/wuhan/app/data/list-total";
+    $.ajax({
+        url: url,
+        dataType: "jsonp",
+        success: function (data) {
+            //  console.log(data.data)
+            var select = $('#select').val();
+            var res = data.data || "";
+            res = JSON.parse(res);
+            var newArr = [];
+            if (res) {
+                //获取到各个省份的数据
+                var province = res.areaTree[0].children;
+                for (var i = 0; i < province.length; i++) {
+                    /*let  bgc =  getbgColor(province[i].total.confirm);*/
+                    var json={};
+                    json = {
+                        name: province[i].name,
+                        todayConfirm: province[i].today.confirm,
+                        todayConfirmCuts: province[i].today.confirmCuts,
+                        value: province[i].total.confirm,
+                        nowConfirm: province[i].total.nowConfirm,
+                        suspect: province[i].total.suspect,
+                        dead: province[i].total.dead,
+                        dataRete: province[i].total.deadRate,
+                        heal: province[i].total.heal,
+                        healRate: province[i].total.healRate,
+                        select: 1
+                    }
+                    newArr.push(json);
+                }
+            }
+        }
+    });
+}
 </script>
