--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
@@ -58,7 +58,7 @@
 <!--editor-->
 <script th:src="@{/static/js/jQuery.js}"></script>
 <script th:src="@{/static/editor/editormd.js}"></script>
-<script th:src="@{/static/js/tools/edit.js}"></script>
+<script th:src="@{/static/js/tools/uEdit/edit.js}"></script>
 <script th:src="@{/static/editor/lib/marked.min.js}"></script>
 <script th:src="@{/static/editor/lib/prettify.min.js}"></script>
 <script th:src="@{/static/editor/lib/raphael.min.js}"></script>
