--- a/Joyce/src/main/resources/templates/tools/task/dayTaskListPage.html
+++ b/Joyce/src/main/resources/templates/tools/task/dayTaskListPage.html
@@ -9,9 +9,10 @@
                 <div class="container-fluid">
                         <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
                             <button id="btn_add" onclick="addDayTask()" type="button"
-                                    class="btn btn-primary btn-space">添加
-                            </button>
-                            <!--<button id="btn_delete" onclick="deleteIdsFuc()" type="button" class="btn btn-danger btn-space">删除 </button>-->
+                                    class="btn btn-primary btn-space">添加</button>
+
+                            <button id="btn_delete" onclick="exportDayTaskTable()" type="button"
+                                    class="btn btn-info btn-space">导出</button>
                         </div>
                         <div class="pull-right" id="query-form"  style="padding-bottom:10px;">
 
