--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorListPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorListPage.html
@@ -54,7 +54,7 @@
   </div>
 </div>
 <!--菜单-->
-<input class="title" type="hidden" value="uedit">
+<input class="title" type="hidden" value="uedit"/>
 </body>
 
 <!--editor-->
