--- a/Joyce/src/main/resources/templates/tools/task/dayTaskListPage.html
+++ b/Joyce/src/main/resources/templates/tools/task/dayTaskListPage.html
@@ -20,11 +20,11 @@
                         <div class="pull-right" id="query-form"  style="padding-bottom:10px;">
 
                              <div class="col-md-3"  style="width:18%;margin-right:5px;">
-                                 <label>创建者:</label>
+                                 <label>姓名:</label>
                                  <select id="userId"  name="userId" >
                                      <option value="0">请选择</option>
                                      <option th:each="user:${users}"
-                                             th:value="${user.id}" th:text="${user.username }"></option>
+                                             th:value="${user.id}" th:text="${user.nickname}"></option>
                                  </select>
                              </div>
 
