--- a/Joyce/src/main/resources/templates/user/registPage.html
+++ b/Joyce/src/main/resources/templates/user/registPage.html
@@ -21,6 +21,12 @@
                     </div>
                 </div>
                 <div class="form-group ">
+                    <label class="col-sm-2 control-label" for="nickname">昵称</label>
+                    <div  class="col-sm-4 ">
+                        <input class="form-control" id="nickname" type="text" name="nickname" placeholder="请输入昵称"/>
+                    </div>
+                </div>
+                <div class="form-group ">
                     <label class="col-sm-2 control-label" for="phone">手机号码</label>
                     <div class="col-sm-4">
                         <input class="form-control" id="phone" type="text" name="phone"  placeholder="请输入手机号码"/>
