--- a/Joyce/src/main/resources/templates/user/queryUserPage.html
+++ b/Joyce/src/main/resources/templates/user/queryUserPage.html
@@ -96,7 +96,7 @@
           <div class="col-sm-5">
             <input class="btn btn-default pull-left"  type="button" onclick="openModelFuc()" value="修改密码"/>
             <input class="btn btn-default " style="margin: 0 9%" type="button" onclick="openForgetPasswordModelFuc()" value="忘记密码"/>
-            <a class="btn btn-default pull-right" th:href="@{'/example/user/userList'}">返回</a>
+            <a class="btn btn-default pull-right" onclick="back()">返回</a>
           </div>
         </div>
       </form>
