--- a/Joyce/src/main/resources/templates/user/updateUserPage.html
+++ b/Joyce/src/main/resources/templates/user/updateUserPage.html
@@ -46,7 +46,7 @@
                     <label class="col-sm-2 control-label" for="select"> </label>
                     <div class="col-sm-4">
                         <input class="btn btn-default pull-left" id="regist" type="button" onclick="updateUserFuc()" value="确认修改"/>
-                        <a class="btn btn-default pull-right" th:href="@{'/example/user/userList'}">返回</a>
+                        <a class="btn btn-default pull-right"  onclick="back()">返回</a>
                     </div>
                 </div>
             </form>
