--- a/Joyce/src/main/resources/templates/common/public/headerBar.html
+++ b/Joyce/src/main/resources/templates/common/public/headerBar.html
@@ -14,6 +14,7 @@
         <span id="user_info"  class="pull-right" style="margin-right: 3%">
             <!--<span style="width: 100px;background-color: red">你好</span>-->
         <span>
+            <input id="session_user_id" type="hidden" th:value="${session.session_user.id}">
           <span><img id="user_img" th:src="${session.session_user.fileUrl}" class="img-circle" onclick="dropdownBlock()"></span>
             <span style="margin: 100%;line-height: 0%" th:text="${session.session_user.username}"><!--</span><span class="glyphicon glyphicon-adjust"></span>-->
         </span>
