--- a/Joyce/src/main/resources/templates/source/sourcePage.html
+++ b/Joyce/src/main/resources/templates/source/sourcePage.html
@@ -34,7 +34,7 @@
                     <label class="col-sm-2 control-label" for="select"> </label>
                     <div class="col-sm-4">
                         <input class="btn btn-default pull-left"  type="button" onclick="saveSource()" value="确认添加"/>
-                      <!--  <a class="btn btn-default pull-right" th:href="@{'/example/user/userList'}">返回</a>-->
+                        <a class="btn btn-default pull-right"  onclick="back()">返回</a>
                     </div>
                 </div>
             </form>
