--- a/Joyce/src/main/resources/templates/common/public/commonHeader.html
+++ b/Joyce/src/main/resources/templates/common/public/commonHeader.html
@@ -3,12 +3,14 @@
 <head th:fragment="header(title)">
     <meta charset="UTF-8">
     <title th:replace="${title}"></title>
-    <link  rel="stylesheet" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap.css}"/>
-    <link  rel="stylesheet" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap-theme.css}"/>
-    <link  rel="stylesheet" th:href="@{/static/css/common/public/public.css}" />
-    <link  rel="stylesheet" th:href="@{/static/bootstrap-table-master/dist/bootstrap-table.css}"/>
-    <link  rel="stylesheet" th:href="@{/static/css/common/public/headerBar.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/js/utils/toastr/css/toastr.css}" />
-    <link rel="shortcut icon" th:href="@{/static/img/logo/favicon.ico}" type="image/x-icon" />
+    <link  rel="stylesheet" type="text/css" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap.css}"/>
+    <link  rel="stylesheet" type="text/css" th:href="@{/static/bootstrap-3.4.1/dist/css/bootstrap-theme.css}"/>
+    <link  rel="stylesheet" type="text/css" th:href="@{/static/css/common/public/public.css}" />
+    <link  rel="stylesheet" type="text/css"  th:href="@{/static/bootstrap-table-master/dist/bootstrap-table.css}"/>
+    <link  rel="stylesheet" type="text/css" th:href="@{/static/css/common/public/headerBar.css}"/>
+    <link rel="stylesheet"  type="text/css" th:href="@{/static/css/utils/toastr/toastr.css}" />
+    <link rel="stylesheet"  type="text/css" th:href="@{/static/css/utils/toastr/toastr.css}" />
+    <link  rel="stylesheet" th:href="@{/static/css/utils/L2d/L2d.css}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/static/img/logo/favicon.ico}"  />
 </head>
 
