--- a/Joyce/src/main/resources/templates/common/public/footer.html
+++ b/Joyce/src/main/resources/templates/common/public/footer.html
@@ -13,9 +13,21 @@
   <script type="text/javascript" th:src="@{/static/js/menu/menuList.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/common/public/headerBar.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/tools/createCode/getDb.js}"></script>
-  <script type="text/javascript" th:src="@{/static/js/utils/toastr/js/toastr.js}"></script>
-  <script type="text/javascript" th:src="@{/static/js/utils/toastr/js/totastr-config.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/utils/toastr/toastr.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/utils/toastr/totastr-config.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/utils/Ewin/js/Ewin.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.min.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.0.min.js}"></script>
+
+  <script type="text/javascript">
+    L2Dwidget.init({"display": {
+        "superSample": 2,
+        "width": 200,
+        "height": 400,
+        "position": "right",
+        "hOffset": 0,
+        "vOffset": 0}});
+  </script>
   <!--<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>-->
     <div style="margin-left: 40%">
       <p>Copyright ©Joyce</p>
