--- a/Joyce/src/main/resources/templates/common/public/header.html
+++ b/Joyce/src/main/resources/templates/common/public/header.html
@@ -9,15 +9,15 @@
     <link  rel="stylesheet" th:href="@{/static/css/common/public/headerBar.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/user/userList.css}"/>
     <link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/static/js/utils/toastr/css/toastr.css}" />
+    <link  rel="stylesheet" th:href="@{/static/css/menu/menuList.css}"/>
+    <link  rel="stylesheet" th:href="@{/static/css/utils/L2d/L2d.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/utils/toastr/toastr.css}" />
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8" />
     <!--Editor.md-->
     <link rel="stylesheet" th:href="@{/static/editor/css/editormd.css}"/>
     <link rel="shortcut icon" th:href="@{/static/img/logo/favicon.ico}" type="image/x-icon" />
-
-
     <title th:replace="${title}"></title>
 </head>
 
