--- a/Joyce/src/main/resources/templates/common/public/footer.html
+++ b/Joyce/src/main/resources/templates/common/public/footer.html
@@ -20,13 +20,13 @@
   <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.0.min.js}"></script>
 
   <script type="text/javascript">
-    L2Dwidget.init({"display": {
+  /*  L2Dwidget.init({"display": {
         "superSample": 2,
         "width": 200,
         "height": 400,
         "position": "right",
         "hOffset": 0,
-        "vOffset": 0}});
+        "vOffset": 0}});*/
   </script>
   <!--<script type="text/javascript" th:src="@{/static/js/common/public/main.js}"></script>-->
     <div style="margin-left: 40%">
