--- a/Joyce/src/main/resources/templates/user/websocketPage.html
+++ b/Joyce/src/main/resources/templates/user/websocketPage.html
@@ -148,7 +148,7 @@
 	function send(){
 		var text = $('#messageText').val();
 		var to=	$("#to").val();
-		if (to==null||to==''){
+		if (to==null){
 			to = "All";
 		}
 		var  innerHTML = "<div><p>我:"+text+"</p></div>"
